--- a/src/main/resources/templates/Add_Product.html
+++ b/src/main/resources/templates/Add_Product.html
@@ -19,7 +19,7 @@
 			Product_Desc : <br />
 			<textarea name="pdescription" id="" cols="15" rows="1"
 				placeholder="Enter Product Description.."></textarea><br />
-
+			<input type="text" name="image" placeholder="Image filename (e.g. pizza.jpg)" required>
 			<button type="submit">Add_Product</button>
 
 		</form>
