--- a/src/main/resources/templates/Navigation.html
+++ b/src/main/resources/templates/Navigation.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <nav th:fragment="navbar()">
-        <img th:src="@{/Images/logo.png}" alt="Logo" class="logo">
+        <img th:src="@{/Images/yourbuddy.jpg}" alt="Logo" class="logo">
         <ul>
             <li><a href="/home">Home</a></li>
-            <li><a href="/products">Products</a></li>
+            <li><a href="/products">Menu</a></li>
             <li><a href="/location">Locate Us</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/login">Log In <i class="fa-duotone fa-arrow-left-to-arc"></i></a></li>
